--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:17.7
-    container_name: "booking-storage"
+    container_name: 'booking-storage'
     restart: unless-stopped
     healthcheck:
       test: pg_isready -U $POSTGRES_USER -d $POSTGRES_DB
@@ -10,50 +10,50 @@ services:
       retries: 5
       start_period: 5s
     volumes:
-      - "booking-storage:/var/lib/postgresql/data"
+      - 'booking-storage:/var/lib/postgresql/data'
     environment:
       POSTGRES_DB: $POSTGRES_DB
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
     ports:
-      - "${POSTGRES_EXTERNAL_PORT}:5432"
+      - '${POSTGRES_EXTERNAL_PORT}:5432'
     networks:
       booking-postgres-net:
     env_file:
       - ./.env
 
-  migrate:
-    image: "migrate/migrate"
-    container_name: "review-migrate"
-    restart: "on-failure:3"
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      POSTGRES_URL: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable"
-    command:
-      - "-path=/migrations"
-      - "-database=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable"
-      - "up"
-    volumes:
-      - "${MIGRATIONS_DIR}:/migrations"
-    networks:
-      booking-postgres-net:
-    env_file:
-      - ./.env
+  # migrate:
+  #   image: 'migrate/migrate'
+  #   container_name: 'review-migrate'
+  #   restart: 'on-failure:3'
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #   environment:
+  #     POSTGRES_URL: 'postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable'
+  #   command:
+  #     - '-path=/migrations'
+  #     - '-database=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable'
+  #     - 'up'
+  #   volumes:
+  #     - '${MIGRATIONS_DIR}:/migrations'
+  #   networks:
+  #     booking-postgres-net:
+  #   env_file:
+  #     - ./.env
 
   booking-backend:
-    image: "denhax/booking-api:v0.1"
-    container_name: "booking-api"
+    image: 'denhax/booking-api:v0.2'
+    container_name: 'booking-api'
     depends_on:
       postgres:
         condition: service_healthy
-      migrate:
-        condition: service_completed_successfully
+      # migrate:
+      #   condition: service_completed_successfully
     ports:
-      - "3000:3000"
+      - '3000:3000'
     environment:
-      - "POSTGRES_URL=${POSTGRES_URL}"
+      - 'DATABSE_URL=${POSTGRES_URL}'
     restart: on-failure:3
     networks:
       booking-postgres-net:
