--- a/deploy/dev/compose.yaml
+++ b/deploy/dev/compose.yaml
@@ -22,7 +22,7 @@ services:
     env_file:
       - ../../.env
 
-  db:
+  postgres:
     image: postgres:17.7-alpine
     container_name: postgres_dev
     environment:
